# control-migracion

./: .gitignore  Documentacion.py  README.md  Requisitoriado.py  migra.py  pyproject.toml
data/: country.csv  required_person.csv
docs/: classes.md  data.md  processes.md
src/: config.py  main.py
src/classes/: Country.py  Documentacion.py  Migrant.py  PeaceIndex.py  Persona.py  Requisitoriado.py
src/classes/gestionData/: AbstractDDBB.py
src/core/: risk_index.py
